local/config/static_lb.yml
static_resources:
  clusters:
  - name: cluster_1
    connect_timeout: 0.5s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: auth-api
        port_value: 4000
  - name: cluster_2
    connect_timeout: 0.5s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: task-api
        port_value: 4000
  - name: cluster_3
    connect_timeout: 0.5s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: user-api
        port_value: 4000
  listeners:
  - name: grpc_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_grpc
          route_config:
            name: local_route
            virtual_hosts:
              - name: grpc
                domains:
                  - "*"
                routes:
                  - match:
                      prefix: "/auth/"
                    route:
                      cluster: cluster_1
                      retry_policy:
                        retry_on: connect-failure
                        num_retries: 3
                        per_try_timeout: 0.5s
                  - match:
                      prefix: "/task/"
                    route:
                      cluster: cluster_2
                      retry_policy:
                        retry_on: connect-failure
                        num_retries: 3
                        per_try_timeout: 0.5s
                  - match:
                      prefix: "/user"
                    route:
                      cluster: cluster_3
                      retry_policy:
                        retry_on: connect-failure
                        num_retries: 3
                        per_try_timeout: 0.5s
          http_filters:
          - name: envoy.filters.http.grpc_stats
          - name: envoy.filters.http.router
